[package]
name = "my_chess"
version = "0.1.0"
edition = "2018"

[profile.dev]
# Since neither me or Luke uses a debugger, turning off debug info should speed up compile times (although it does make debugging shaders a bit more difficult)
opt-level = 0

[dependencies]
macroquad = "0.3"
sapp-jsutils = "0.1"
base64 = "0.13"

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "userLandscape"