[package]
name = "my_chess"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
macroquad = "0.3"
sapp-jsutils = "0.1"
base64 = "0.13"
brotli = { version = "3" }

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "userLandscape"